--- a/style.css
+++ b/style.css
@@ -27,8 +27,8 @@ body::before {
 }
 
 .container {
-    width: 1200px;
-    height: 600px;
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -57,7 +57,7 @@ body::before {
     background: #1875E8;
     padding: 16px 24px;
     width: 100%;
-    font-size: 24px;
+    font-size: 1rem;
     font-weight: 700;
     border: none;
     margin-top: 2rem;
@@ -83,7 +83,7 @@ body::before {
     border: none;
     color: #1875E8;
     padding: 2rem;
-    font-size: 24px;
+    font-size: 1rem;
     font-weight: 700;
     font-family: 'Inter', sans-serif;
 }
@@ -95,7 +95,7 @@ body::before {
 
 h1 {
     font-family: 'Chakra Petch', sans-serif;
-    font-size: 72px;
+    font-size: 4.5rem;
     padding-bottom: 3rem;
 }
 
@@ -105,6 +105,6 @@ button {
 }
 
 .texto__parrafo {
-    font-size: 32px;
+    font-size: 2rem;
     font-weight: 400;
 }
